syntax = "proto3";

package discopanel.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nickheyer/discopanel/pkg/proto/discopanel/v1;discopanelv1";

// User permission levels
enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_VIEWER = 1;
  USER_ROLE_EDITOR = 2;
  USER_ROLE_ADMIN = 3;
}

// Container runtime state
enum ServerStatus {
  SERVER_STATUS_UNSPECIFIED = 0;
  SERVER_STATUS_CREATING = 1;
  SERVER_STATUS_STARTING = 2;
  SERVER_STATUS_RUNNING = 3;
  SERVER_STATUS_STOPPING = 4;
  SERVER_STATUS_STOPPED = 5;
  SERVER_STATUS_RESTARTING = 6;
  SERVER_STATUS_ERROR = 7;
  SERVER_STATUS_UNHEALTHY = 8;
}

// Minecraft server software type
enum ModLoader {
  MOD_LOADER_UNSPECIFIED = 0;
  MOD_LOADER_VANILLA = 1;
  MOD_LOADER_FORGE = 2;
  MOD_LOADER_FABRIC = 3;
  MOD_LOADER_QUILT = 4;
  MOD_LOADER_PAPER = 5;
  MOD_LOADER_SPIGOT = 6;
  MOD_LOADER_BUKKIT = 7;
  MOD_LOADER_PURPUR = 8;
  MOD_LOADER_SPONGE_VANILLA = 9;
  MOD_LOADER_SPONGE_FORGE = 10;
  MOD_LOADER_MOHIST = 11;
  MOD_LOADER_CATSERVER = 12;
  MOD_LOADER_ARCLIGHT = 13;
  MOD_LOADER_AUTO_CURSEFORGE = 14;
  MOD_LOADER_MODRINTH = 15;
  MOD_LOADER_NEOFORGE = 16;
  MOD_LOADER_FOLIA = 17;
}

// System user account
message User {
  string id = 1;
  string username = 2;
  optional string email = 3;
  UserRole role = 4;
  bool is_active = 5;
  optional string recovery_key = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Minecraft server instance
message Server {
  string id = 1;
  string name = 2;
  string description = 3;
  ModLoader mod_loader = 4;
  string mc_version = 5;
  ServerStatus status = 6;
  int32 port = 7;
  string proxy_hostname = 8;
  string proxy_listener_id = 9;
  int32 proxy_port = 10;
  int32 max_players = 11;
  int32 memory = 12;
  string data_path = 13;
  string container_id = 14;
  optional google.protobuf.Timestamp last_started = 15;
  int32 java_version = 16;
  string docker_image = 17;
  bool auto_start = 18;
  bool detached = 19;
  string tps_command = 20;

  // Runtime stats
  int64 memory_usage = 21;
  double cpu_percent = 22;
  int64 disk_usage = 23;
  int64 disk_total = 24;
  int32 players_online = 25;
  double tps = 26;

  // Additional configuration
  repeated AdditionalPort additional_ports = 27;
  DockerOverrides docker_overrides = 28;

  google.protobuf.Timestamp created_at = 29;
  google.protobuf.Timestamp updated_at = 30;

  // SLP
  bool slp_available = 31;
  int64 slp_latency_ms = 32;
  string motd = 33;
  string server_version = 34;
  int32 protocol_version = 35;
  repeated string player_sample = 36;
  int32 max_players_slp = 37;
  string favicon = 38; // Base64 PNG
}

// Extra port mapping for container
message AdditionalPort {
  string name = 1; // User-friendly name for the port (e.g., "BlueMap Web")
  int32 container_port = 2; // Port inside the container
  int32 host_port = 3; // Port on the host machine
  string protocol = 4; // Protocol: "tcp" or "udp" (defaults to "tcp" if empty)
}

// Volume mount configuration for container
message VolumeMount {
  string source = 1; // Host path or volume name
  string target = 2; // Container path
  bool read_only = 3; // Mount as read-only
  string type = 4; // Mount type: "bind" or "volume" (defaults to "bind")
}

// Container runtime customization
message DockerOverrides {
  map<string, string> environment = 1; // Additional environment variables
  repeated VolumeMount volumes = 2; // Additional volume mounts
  string network_mode = 3; // Override network mode
  string restart_policy = 4; // Override restart policy
  double cpu_limit = 5; // CPU limit (e.g., 1.5 for 1.5 cores)
  int64 memory_limit = 6; // Override memory limit in MB
  map<string, string> labels = 7; // Additional labels
  repeated string cap_add = 8; // Linux capabilities to add
  repeated string cap_drop = 9; // Linux capabilities to drop
  repeated string devices = 10; // Device mappings (e.g., "/dev/ttyUSB0:/dev/ttyUSB0")
  repeated string extra_hosts = 11; // Extra entries for /etc/hosts
  bool privileged = 12; // Run container in privileged mode
  bool read_only = 13; // Mount root filesystem as read-only
  repeated string security_opt = 14; // Security options
  int64 shm_size = 15; // Size of /dev/shm in bytes
  string user = 16; // User to run commands as
  string working_dir = 17; // Working directory inside container
  repeated string entrypoint = 18; // Override default entrypoint
  repeated string command = 19; // Override default command
}

// TCP proxy listener endpoint
message ProxyListener {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 port = 4;
  bool enabled = 5;
  bool is_default = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Global proxy settings
message ProxyConfig {
  string id = 1;
  bool enabled = 2;
  string base_url = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// Authentication system settings
message AuthConfig {
  string id = 1;
  bool enabled = 2;
  int32 session_timeout = 3;
  bool require_email_verify = 4;
  bool allow_registration = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
